--- a/android/app/src/main/res/layout/item_artwork_option.xml
+++ b/android/app/src/main/res/layout/item_artwork_option.xml
@@ -4,9 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardOption"
-    android:layout_width="140dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/spacing_sm"
+    android:layout_marginBottom="@dimen/spacing_sm"
     android:clickable="true"
     android:focusable="true"
     app:cardBackgroundColor="@color/theme_surface"
@@ -18,19 +18,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/spacing_sm">
+        android:orientation="horizontal"
+        android:padding="@dimen/spacing_sm"
+        android:gravity="center_vertical">
 
-        <!-- Thumbnail - Square aspect ratio for icons -->
+        <!-- Thumbnail - Adaptive aspect ratio for icons/heroes/logos -->
         <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="124dp">
+            android:id="@+id/frameThumbnail"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:minHeight="60dp">
 
             <ImageView
                 android:id="@+id/imageThumbnail"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
                 android:background="@color/theme_card_background"
                 tools:src="@drawable/ic_iisu_home" />
 
@@ -42,43 +46,50 @@
                 android:layout_gravity="center"
                 android:visibility="gone" />
 
-            <!-- Selection indicator -->
-            <ImageView
-                android:id="@+id/iconSelected"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="top|end"
-                android:layout_margin="4dp"
-                android:src="@drawable/ic_check_circle"
-                android:visibility="gone"
-                app:tint="@color/accent_cyan" />
-
         </FrameLayout>
 
-        <!-- Source label - Continuum Bold for single word labels -->
-        <TextView
-            android:id="@+id/textSource"
-            android:layout_width="match_parent"
+        <!-- Info section -->
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_xs"
-            android:gravity="center"
-            android:textSize="11sp"
-            android:fontFamily="@font/continuum"
-            android:textColor="@color/accent_cyan"
-            tools:text="SteamGridDB" />
+            android:layout_weight="1"
+            android:layout_marginStart="@dimen/spacing_md"
+            android:orientation="vertical">
 
-        <!-- Dimensions (optional) - Cal Sans for descriptions -->
-        <TextView
-            android:id="@+id/textDimensions"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="10sp"
-            android:fontFamily="@font/calsans"
-            android:textColor="@color/theme_text_secondary"
+            <!-- Source label -->
+            <TextView
+                android:id="@+id/textSource"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:fontFamily="@font/continuum"
+                android:textColor="@color/accent_cyan"
+                tools:text="SteamGridDB" />
+
+            <!-- Dimensions -->
+            <TextView
+                android:id="@+id/textDimensions"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textSize="12sp"
+                android:fontFamily="@font/calsans"
+                android:textColor="@color/theme_text_secondary"
+                android:visibility="gone"
+                tools:text="1024x1024"
+                tools:visibility="visible" />
+
+        </LinearLayout>
+
+        <!-- Selection indicator -->
+        <ImageView
+            android:id="@+id/iconSelected"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="@dimen/spacing_sm"
+            android:src="@drawable/ic_check_circle"
             android:visibility="gone"
-            tools:text="1024x1024"
-            tools:visibility="visible" />
+            app:tint="@color/accent_cyan" />
 
     </LinearLayout>
 
